# GermGenie

./: .gitignore  README.md  pyproject.toml
src/GermGenie/: main.py  pipeline.py
src/GermGenie.egg-info/: PKG-INFO
src/germgenie/: main.py
