[build-system]
requires = ["plotly>=5.21.0", "osfclient==0.0.5", "pandas>=1.3.5", "setuptools>=59.8.0"]
build-backend = "setuptools.buid_meta"


[project]
name = "GermGenie"
version = "0.0.1"
authors = [
    {name="Sander Boden", email="s.boden1@avans.nl"},
    {name="Daan Brackel", email="dcj.brackel@student.avans.nl"},
]
description = "Python wrapper for multi-sample 16S classification using EMU"
readme = "REAMDE.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
GermGenie = "main:main"

[project.urls]
Repository = "https://github.com/Avans-ATLS/GermGenie"
Issues = "https://github.com/Avans-ATLS/GermGenie/issues"

